--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,10 +5,7 @@ import ContactCTA from "../components/ContactCTA.astro";
 import Hero from "../components/Hero.astro";
 ---
 
-<BaseLayout
-	title="About | Ahmed Gharbi"
-	description="About Ahmed Gharbi"
->
+<BaseLayout title="About | Ahmed Gharbi" description="About Ahmed Gharbi">
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
@@ -65,7 +62,7 @@ import Hero from "../components/Hero.astro";
 				<div class="content">
 					<p>
 						Advanced – Javascript, Unix, Git, Scrum, Agile, Java,
-						Symfony,
+						Symfony, Astro
 					</p>
 					<p>
 						Codename one, Mobile, QT, C, C++, Python, SDL 1.2,
