--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -61,12 +61,16 @@ import Hero from "../components/Hero.astro";
 				<h2 class="section-title">Skills</h2>
 				<div class="content">
 					<p>
-						Advanced – Javascript, Unix, Git, Scrum, Agile, Java,
-						Symfony, Astro
+						Languages:
+Unity, JavaScript, Java, React, C, C++, Python, HTML/CSS, PHP, SQL, PLSQL
 					</p>
 					<p>
-						Codename one, Mobile, QT, C, C++, Python, SDL 1.2,
-						HTML/CSS, PHP, SQL, PLSQL
+						Frameworks/Tools:
+Unity ,React , Symfony, NodeJS , Codename One, QT , SDL 1.2 
+					</p>
+					<p>
+						Technologies/Methods:
+Unix, Git, Scrum, Agile
 					</p>
 				</div>
 			</section>
