updated the site

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -48,13 +48,13 @@ import Hero from "../components/Hero.astro";
 			<section>
 				<h2 class="section-title">Education</h2>
 				<div class="content">
-					<p>Lycée Jeunes Filles de Bizerte.</p>
-					<p>°baccalaureate | 2020.</p>
+					<p>Habib Thameur High School of Bizerte.</p>
+					<p>°Computer science baccalaureate | 2020.</p>
 					<p>
 						Private Higher School of Engineering and Technology
 						ESPRIT.
 					</p>
-					<p>°Engineering | 2021 – present.</p>
+					<p>°Software Engineer (Game Development)| 2021 – present.</p>
 				</div>
 			</section>
 			<section>
@@ -62,15 +62,15 @@ import Hero from "../components/Hero.astro";
 				<div class="content">
 					<p>
 						Languages:
-Unity, JavaScript, Java, React, C, C++, Python, HTML/CSS, PHP, SQL, PLSQL
+						Unity, JavaScript, Java, React, C, C++, Python, HTML/CSS, PHP, SQL, PLSQL
 					</p>
 					<p>
 						Frameworks/Tools:
-Unity ,React , Symfony, NodeJS , Codename One, QT , SDL 1.2 
+						Unity ,React , Symfony, NodeJS , Codename One, QT , SDL 1.2 
 					</p>
 					<p>
 						Technologies/Methods:
-Unix, Git, Scrum, Agile
+						Unix, Git, Scrum, Agile
 					</p>
 				</div>
 			</section>
