--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,24 +24,13 @@ import Hero from "../components/Hero.astro";
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						Forward-looking student from the Private Higher School
-						of Engineering and Technology ESPRIT, specializing in
-						software engineering. I am equipped with a diverse skill
-						set and a passion for developing streamlined procedures
-						to enhance performance. Proficient in various
-						programming languages and technologies, including Java,
-						Symfony, Mobile Development, PHP, HTML/CSS, SQL, and
-						PL/SQL, I am well-prepared to contribute to software
-						development projects. With experience working
-						collaboratively in teams, I possess strong leadership
-						skills and the ability to guide my team towards
-						effective solutions. Additionally, I am currently
-						expanding my knowledge by exploring Node.js, React.js,
-						and Angular. With a strong focus on innovation and a
-						commitment to delivering high-quality solutions, I am
-						eager to leverage my skills and contribute to the
-						success of an organization in the software engineering
-						field.
+						As a passionate Game Developer with extensive industry 
+						experience and a solid academic background, I am deeply 
+						enthusiastic about delving into cutting-edge technologies 
+						to propel innovation within the gaming sphere. My journey 
+						in the industry has equipped me with invaluable insights 
+						and skills, honing my ability to navigate complex challenges 
+						and deliver exceptional gaming experiences.
 					</p>
 				</div>
 			</section>
