--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const projects = (await getCollection("work"))
 			<header class="hero">
 				<Hero
 					title="Hello, my name is Ahmed Gharbi"
-					tagline="I am a student specializing in Software Engineering (Game Developer). who is currently based in Bizerte, Tunisia."
+					tagline="I am a student specializing in Software Engineering (Game Developer). I am currently based in Bizerte, Tunisia."
 					align="start"
 				>
 					<div class="roles">
