--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,13 +24,13 @@ import Hero from "../components/Hero.astro";
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						As a passionate Game Developer with extensive industry 
-						experience and a solid academic background, I am deeply 
-						enthusiastic about delving into cutting-edge technologies 
-						to propel innovation within the gaming sphere. My journey 
-						in the industry has equipped me with invaluable insights 
-						and skills, honing my ability to navigate complex challenges 
-						and deliver exceptional gaming experiences.
+						As a dedicated Software Developer with a specialization in game development, 
+						I bring extensive industry experience and a strong academic background. 
+						I am deeply committed to exploring cutting-edge technologies to drive innovation 
+						within the broader software development field, while maintaining a particular focus 
+						on the gaming sphere. My journey in the industry has equipped me with invaluable insights 
+						and skills, honing my ability to navigate complex challenges and deliver exceptional gaming
+						 experiences.
 					</p>
 				</div>
 			</section>
